# linux-fs-integrity_os_assignment4

./: .gitignore  CMakeLists.txt  Makefile  abc.txt  base.c  filesys.c  main  mycheck  mycheck.c  myfile.txt  secure.txt  testcase3.c  testcase4.c  testmerkle.c  testmerkle2.c  trying.c
mytests/: abc.cpp  testMerkle.c
